# JXS_21122_LAB

./: CMakeLists.txt  CMakePresets.json  README.md
JXS_1Dcodec/: CMakeLists.txt  JXS_1Dcodec.c  JXS_1Dcodec.h  file_io.c  jxs.lib  jxsd.lib
JXS_21122_LAB/: CMakeLists.txt  ChangeEndianness.c  ChangeEndianness.v  JXS_21122_LAB.cpp
codestream-parser/: README  README-Python3  icc.py  jp2box.py  jp2codestream.py  jp2file.py  jp2utils.py  jpgcodestream.py  jpgxtbox.py  jxrfile.py  jxscodestream.py
